--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.3.1",
     "axios": "^0.18.0",
     "nuxt": "^1.0.0",
     "progressbar.js": "^1.0.1",
