--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "progressbar.js": "^1.0.1",
     "velocity": "^0.7.2",
     "vue-autosize": "^1.0.2",
+    "vue-picture-input": "^2.1.6",
     "vue-textarea-autosize": "^1.0.4",
     "vue-the-mask": "^0.11.1"
   },
