--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "velocity": "^0.7.2",
     "vue-affix": "^0.4.0",
     "vue-autosize": "^1.0.2",
+    "vue-multiselect": "^2.1.0",
     "vue-picture-input": "^2.1.6",
     "vue-textarea-autosize": "^1.0.4",
     "vue-the-mask": "^0.11.1",
