--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.18.0",
     "eslint-plugin-import": "^2.13.0",
     "nuxt": "^1.0.0",
+    "passport": "^0.4.0",
     "progressbar.js": "^1.0.1",
     "velocity": "^0.7.2",
     "vue-affix": "^0.4.0",
