--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "eslint-plugin-import": "^2.13.0",
     "nuxt": "^1.0.0",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "progressbar.js": "^1.0.1",
     "velocity": "^0.7.2",
     "vue-affix": "^0.4.0",
     "vue-autosize": "^1.0.2",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-cookies": "^1.5.7",
     "vue-multiselect": "^2.1.0",
     "vue-picture-input": "^2.1.6",
     "vue-scrollactive": "^0.7.1",
