--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.1",
     "axios": "^0.18.0",
+    "cookieparser": "^0.1.0",
     "eslint-plugin-import": "^2.13.0",
+    "js-cookie": "^2.2.0",
     "nuxt": "^1.0.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
@@ -25,7 +27,6 @@
     "vue-affix": "^0.4.0",
     "vue-autosize": "^1.0.2",
     "vue-awesome-swiper": "^3.1.3",
-    "vue-cookies": "^1.5.7",
     "vue-multiselect": "^2.1.0",
     "vue-picture-input": "^2.1.6",
     "vue-scrollactive": "^0.7.1",
