--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.1",
+    "@nuxtjs/auth": "^4.5.3",
+    "@nuxtjs/axios": "^5.3.6",
     "axios": "^0.18.0",
     "cookieparser": "^0.1.0",
     "eslint-plugin-import": "^2.13.0",
