--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "nuxt",
     "devd": "nuxt --hostname 10.3.6.27 --port 3000",
+    "devm": "nuxt --hostname 0.0.0.0 --port 3000",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
