--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.18.0",
     "cookieparser": "^0.1.0",
     "eslint-plugin-import": "^2.13.0",
+    "gsap": "^2.0.2",
     "js-cookie": "^2.2.0",
     "nuxt": "^1.0.0",
     "passport": "^0.4.0",
