--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "progressbar.js": "^1.0.1",
+    "v-tooltip": "^2.0.0-rc.33",
     "velocity": "^0.7.2",
     "vue-affix": "^0.4.0",
     "vue-autosize": "^1.0.2",
