--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "install-windows-service": "winser -i",
+    "uninstall-windows-service": "winser -r"
   },
   "dependencies": {
     "@nuxtjs/auth": "^4.5.3",
@@ -37,7 +39,8 @@
     "vue-scrollactive": "^0.8.0",
     "vue-textarea-autosize": "^1.0.4",
     "vue-the-mask": "^0.11.1",
-    "webpack": "^4.16.5"
+    "webpack": "^4.16.5",
+    "winser": "^1.0.3"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
