--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "devl": "nuxt --hostname 10.3.6.27 --port 3000",
+    "devl": "nuxt --port 3000",
     "deve": "nuxt --hostname 10.3.6.27 --port 4000",
     "build": "nuxt build",
     "start": "nuxt start",
