added preload animation

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nuxt",
     "devl": "nuxt --port 3000",
-    "deve": "nuxt --hostname 10.3.6.27 --port 4000",
+    "deve": "nuxt --port 4000",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
