--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "progressbar.js": "^1.0.1",
+    "transliteration": "^2.1.3",
     "v-img": "^0.2.0",
     "v-tooltip": "^2.0.0-rc.33",
     "velocity": "^0.7.2",
