--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deve": "nuxt --hostname 10.3.6.27 --port 4000",
     "build": "nuxt build",
     "start": "nuxt start --hostname 10.3.6.27 --port 4000",
+    "startl": "nuxt start --port 3000",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
