--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
     "uninstall-windows-service": "winser -r"
   },
   "dependencies": {
-    "@nuxtjs/auth": "^4.5.3",
+    "@nuxtjs/auth": "^4.7.0",
     "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/style-resources": "^0.1.2",
     "axios": "^0.18.0",
     "cookieparser": "^0.1.0",
     "eslint-plugin-import": "^2.13.0",
     "gsap": "^2.0.2",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.11",
-    "nuxt": "^1.0.0",
+    "nuxt": "^1.4.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "progressbar.js": "^1.0.1",
@@ -53,7 +54,7 @@
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-vue": "^4.0.0",
-    "node-sass": "^4.9.2",
-    "sass-loader": "^7.0.3"
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0"
   }
 }
